Fix a webkit scrollbar bug.

--- a/src/stylesheets/_compare.sass
+++ b/src/stylesheets/_compare.sass
@@ -10,7 +10,7 @@
     +border-radius(10px)
     padding: 0.7em
     font-size: 0.9em
-    line-height: 1.2em
+    line-height: 1.3em
     overflow: auto
     border:
       style: solid
